[gd_scene load_steps=3 format=3 uid="uid://title_screen_001"]

[ext_resource type="Script" path="res://ui/menus/title_screen.gd" id="1_title_screen"]
[ext_resource type="PackedScene" uid="uid://difficulty_selection_001" path="res://ui/menus/difficulty_selection.tscn" id="2_difficulty_selection"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_title_screen")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.95, 0.85, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "MOMI CHRONICLES"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.9, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.6, 1, 0.6, 1)
theme_override_colors/font_pressed_color = Color(0.4, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "New Game"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.85, 0.95, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.7, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Continue"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 48)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 0.6, 0.5, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.4, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "Quit"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DifficultyIndicator" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "Current Difficulty: Normal"
horizontal_alignment = 1

[node name="DifficultySelection" parent="." instance=ExtResource("2_difficulty_selection")]
visible = false
